cmake_minimum_required(VERSION 3.6)
project(LSystem)
project(FloatParser)
set(CMAKE_CXX_STANDARD 11)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -Wall -Wextra")
endif()

set(SOURCE_FILES_L LSystem.cpp)
set(SOURCE_FILES_F FloatParser.cpp)
add_executable(Lsystem ${SOURCE_FILES_L})
add_executable(FloatParser ${SOURCE_FILES_F})